mb button small fix

--- a/src/styles/mb.less
+++ b/src/styles/mb.less
@@ -35,6 +35,7 @@ a {
         &.mb-small {
             padding: 7px 15px;
             font-size: 12px;
+            min-height: 32px;
         }
     }
 }
